# dj3byex

./: pyproject.toml
mysite/: db.sqlite3
mysite/blog/: admin.py  forms.py  models.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug_comment.py  0003_post_tags.py
mysite/mysite/: settings.py  urls.py
mysite/static/css/: blog.css
mysite/templates/blog/: base.html  pagination.html
mysite/templates/blog/post/: list.html  share.html
